# FASE_HostCPU

./: .gitignore  CMakeLists.txt  README.md
crypto/: CMakeLists.txt
garbled_circuit/: CMakeLists.txt  garbled_circuit.cpp  garbled_circuit.h  garbled_circuit_high_mem.cpp  garbled_circuit_high_mem.h  garbled_circuit_main.cpp  garbled_circuit_test.cpp  garbled_circuit_util.h  test_file_rw_speed.cpp  txt2bin.cpp
hw_aclrtr/: Keys.txt  Labels.txt  OLabels.txt  OMasks.txt  Tables.txt
hw_aclrtr/all_logic/: Keys.txt  Labels.txt  Logics.txt  OLabels.txt  OMasks.txt  Rand.txt  Tables.txt
hw_aclrtr/mix_logic/: Labels.txt  Netlist.txt  OLabels.txt  Tables.txt
hw_aclrtr/oneand/: OLabels.txt  Tables.txt
scd/: CMakeLists.txt  README.md  V2SCD_ALL.sh.in  scd.cpp  scd.h  scheduling.cpp  scheduling.h  v_2_scd.cpp  v_2_scd.h  v_2_scd_main.cpp
scd/netlists/: all_logic_syn.scd  all_logic_syn.v  common.yos  hamming_32bit_32cc.scd  hamming_32bit_32cc.v  mix_logic_syn.scd  mix_logic_syn.v  oneand.scd  oneand.v  oneand_syn_yos.scd  oneand_syn_yos.v
tcpip/: CMakeLists.txt
util/: CMakeLists.txt  common.h  txt2bin.cpp  util.cpp  util.h
